--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.5.1
   flutter_svg: ^0.23.0+1
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
